Deletes un-needed merchandise files. Adds profile page for each user where all their posts are displayed. Changed layout to a fixed width navigation bar with a 12 col xs container for the content - Scales much better.

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -40,18 +40,17 @@
 /* ================================================= */
 
 #navigation {
-
+	width: 240px;
+	padding: 10px;
+	position: fixed;
+	height: 100vh;
+	background-color: #19191f;
+	color: #fff;
 }
 
 .container{
 	width: auto;
-}
-
-#navigation {
-	/*width: 240px;*/
-	height: 100vh;
-	background-color: #19191f;
-	color: #fff;
+	margin-left: 240px;
 }
 
 #navigation button{
