--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,44 +1,3 @@
-
-/*These borders can be deleted after styling is finished. */
-/*.col-xs-1 {
-	border: 1px solid #000;
-}
-.col-xs-2 {
-	border: 1px solid #000;
-}
-.col-xs-3 {
-	border: 1px solid #000;
-}
-.col-xs-4 {
-	border: 1px solid #000;
-}
-.col-xs-5 {
-	border: 1px solid #000;
-}
-.col-xs-6 {
-	border: 1px solid #000;
-}
-.col-xs-7 {
-	border: 1px solid #000;
-}
-.col-xs-8 {
-	border: 1px solid #000;
-}
-.col-xs-9 {
-	border: 1px solid #000;
-}
-.col-xs-10 {
-	border: 1px solid #000;
-}
-.col-xs-11 {
-	border: 1px solid #000;
-}
-.col-xs-12 {
-	border: 1px solid #000;
-}*/
-
-/* ================================================= */
-
 #navigation {
 	width: 100%;
 	padding: 10px 20px;
@@ -188,6 +147,13 @@ h3 {
 	text-align: center;
 }
 
+.header h2 {
+	color: #000;
+}
 
+.header p {
+	color: #000;
+}
 
+/* ================================================= */
 
